--- a/weather_App/Base.lproj/Main.storyboard
+++ b/weather_App/Base.lproj/Main.storyboard
@@ -82,11 +82,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weatherCell" rowHeight="85" id="D70-bv-VFM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weatherCell" rowHeight="85" id="D70-bv-VFM" customClass="weatherCellTableViewCell" customModule="weather_App" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="watherCell" tableViewCell="D70-bv-VFM" id="wN1-YN-35W">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="84.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ED-dx-Guv">
@@ -149,6 +149,12 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="1j7-cd-L9S" secondAttribute="trailing" constant="38" id="gGe-nX-Nwx"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="DayLabel" destination="L44-y4-ycp" id="Wuz-QY-OpR"/>
+                                            <outlet property="WeatherType" destination="aCv-Gw-vfq" id="bu6-oW-6W4"/>
+                                            <outlet property="celsious" destination="SZg-ih-BCB" id="Lh8-iW-HK1"/>
+                                            <outlet property="fareight" destination="08K-KL-Lir" id="t1b-1l-fsB"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
